--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -27,9 +28,18 @@
 
 
 
-        <div id="upperHalf">
-            <div id="name">Caitlin Wolters</div>
+        <div id="upperHalf"></div>
+
+        <div id="dl-map">
+            <a href="projects/dl-map">
+                <figure>
+                    <img src="img/dl-map.png">
+                    <figcaption> Devil's Lake State Park Map </figcaption>
+                </figure>
+            </a>
         </div>
+
+        <div class="name">Caitlin Wolters</div>
 
 
 
