--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" href="css/main.css">
@@ -28,18 +29,17 @@
 
 
 
-        <div id="upperHalf"></div>
 
-        <div id="dl-map">
-            <a href="projects/dl-map">
-                <figure>
-                    <img src="img/dl-map.png">
-                    <figcaption> Devil's Lake State Park Map </figcaption>
-                </figure>
-            </a>
+        <div id="contents">
+            <i class="fa fa-map-marker"></i>
+            Caitlin Wolters
+            <div id="links">
+                <a href="https://twitter.com/CaitlinWolters" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="http://www.linkedin.com/in/caitlinwolters" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://github.com/CaitW" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="http://stackoverflow.com/users/3356430/caitlinw" target="_blank"><i class="fa fa-stack-exchange"></i></a>
+            </div>
         </div>
-
-        <div class="name">Caitlin Wolters</div>
 
 
 
