--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
-
-
         <div id="contents">
             <i class="fa fa-map-marker"></i>
             Caitlin Wolters
-            <div id="links">
+            <!--
+                <div id="internalLinks">
+                    <span class="internalLink">projects</span>
+                    <span class="internalLink">resume</span>
+                </div>
+            -->
+            <div id="externalLinks">
                 <a href="https://twitter.com/CaitlinWolters" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="http://www.linkedin.com/in/caitlinwolters" target="_blank"><i class="fa fa-linkedin"></i></a>
                 <a href="https://github.com/CaitW" target="_blank"><i class="fa fa-github"></i></a>
                 <a href="http://stackoverflow.com/users/3356430/caitlinw" target="_blank"><i class="fa fa-stack-exchange"></i></a>
             </div>
         </div>
-
-
-
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
