--- a/index.html
+++ b/index.html
@@ -74,7 +74,66 @@
             <div class="page" name="resume">
                 <div class="title"> <i class="fa fa-chevron-circle-left"></i> Resume </div>
                 <div class="subtitle">Skills</span>
+                <div class="textArea">
+                    <ul>
+                        <li>Front End:
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>Javascript</li>
+                                <li>jQuery</li>
+                                <li>Leaflet</li>
+                                <li>OpenLayers</li>
+                                <li>Bootstrap</li>
+                            </ul>
+                        </li>
+                        <li>Back End:                            
+                            <ul>
+                                <li>PHP</li>
+                                <li>Node.js</li>
+                            </ul> 
+                       </li>
+                        <li>Database: 
+                            <ul>
+                                <li>PostgreSQL</li>
+                                <li>MySQL</li>
+                            </ul> 
+                       </li>
+                        <li>GIS:
+                            <ul>
+                                <li>ArcGIS</li>
+                                <li>QGIS</li>
+                                <li>TileMill</li>
+                                <li>GDAL</li>
+                                <li>GeoJSON</li>
+                                <li>TopoJSON</li>
+                            </ul> 
+                       </li>
+                        <li>Version Control: 
+                            <ul>
+                                <li>git</li>
+                                <li>GitHub</li>
+                            </ul> 
+                       </li>
+                        <li>Design: 
+                            <ul>
+                                <li>Illustrator</li>
+                                <li>Photoshop</li>
+                            </ul> 
+                       </li>
+                    </ul>
+                </div>
                 <div class="subtitle">Experience</span>
+                <div class="textArea">
+                    <h3>Independent Contracting <span class="jobDates">November 2014 - Present</span></h3>
+                    <p>
+                        I work remotely for a nonprofit based in the midwest. I create web-based mapping applications using Javascript and mapping libraries like Leaflet and OpenLayers.
+                    </p>
+                    <h3>Wisconsin State Cartographer's Office <span class="jobDates">October 2013 - December 2014</span></h3>
+                    <p>
+                        Web development utilizing javascript, mapping libraries (Leaflet, OpenLayers), HTML and CSS, GitHub, PHP, PostgreSQL and PostGIS. Spatial data processing utilizing ArcMap, QGIS, and utilities like GDAL. Cartography using Tilemill and Adobe Illustrator. Leadership in team development of internal and contractual applications.
+                    </p>
+                </div>
             </div>
         </div>
 
