--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                     <span class="internalLink" name="projects">projects</span>
                     <i class="fa fa-circle"></i>
                     <span class="internalLink" name="resume">resume</span>
+                     <i class="fa fa-circle"></i>
+                    <span class="internalLink" name="about">about</span>
                 </div>
                 
                 <div id="externalLinks">
@@ -73,7 +75,7 @@
 
             <div class="page" name="resume">
                 <div class="title"> <i class="fa fa-chevron-circle-left"></i> Resume </div>
-                <div class="subtitle">Skills</span>
+                <div class="subtitle">Skills</div>
                 <div class="textArea">
                     <ul>
                         <li>Front End:
@@ -85,6 +87,7 @@
                                 <li>Leaflet</li>
                                 <li>OpenLayers</li>
                                 <li>Bootstrap</li>
+                                <li>Turf.js</li>
                             </ul>
                         </li>
                         <li>Back End:                            
@@ -104,6 +107,7 @@
                                 <li>ArcGIS</li>
                                 <li>QGIS</li>
                                 <li>TileMill</li>
+                                <li>Mapbox Studio</li>
                                 <li>GDAL</li>
                                 <li>GeoJSON</li>
                                 <li>TopoJSON</li>
@@ -123,17 +127,22 @@
                        </li>
                     </ul>
                 </div>
-                <div class="subtitle">Experience</span>
+                <div class="subtitle">Experience</div>
                 <div class="textArea">
                     <h3>Independent Contracting <span class="jobDates">November 2014 - Present</span></h3>
                     <p>
-                        I work remotely for a nonprofit based in the midwest. I create web-based mapping applications using Javascript and mapping libraries like Leaflet and OpenLayers.
+                        Remote work for a nonprofit based in the midwest. Creation of web-based mapping applications using Javascript and mapping libraries like Leaflet and OpenLayers.
                     </p>
                     <h3>Wisconsin State Cartographer's Office <span class="jobDates">October 2013 - December 2014</span></h3>
                     <p>
                         Web development utilizing javascript, mapping libraries (Leaflet, OpenLayers), HTML and CSS, GitHub, PHP, PostgreSQL and PostGIS. Spatial data processing utilizing ArcMap, QGIS, and utilities like GDAL. Cartography using Tilemill and Adobe Illustrator. Leadership in team development of internal and contractual applications.
                     </p>
                 </div>
+            </div>
+
+            <div class="page" name="about">
+                 <div class="title"> <i class="fa fa-chevron-circle-left"></i> About </div>
+
             </div>
         </div>
 
