add contact section

--- a/index.html
+++ b/index.html
@@ -339,6 +339,22 @@
       </ul>
     </section>
 
+    <section>
+      <h2>Contact</h2>
+      <ul>
+        <li>
+          <ul>
+            <li>
+              wolters.caitlin@gmail.com
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/caitlinwolters/">LinkedIn</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   </body>
 </html>
