--- a/index.html
+++ b/index.html
@@ -140,15 +140,19 @@
         <li>
           Ridgeline
           <ul>
-            <li><h3>Senior Product Engineer</h3></li>
-            <li>February 2021 - present</li>
+            <li class="title-date">
+              <h3>Senior Product Engineer</h3>
+              <h4>February 2021 - present</h4>
+            </li>
           </ul>
         </li>
         <li>
           OmniSci
           <ul>
-            <li><h3>Front End Engineer, Front End Team Lead</h3></li>
-            <li>January 2019 - February 2021</li>
+            <li class="title-date">
+              <h3>Front End Engineer, Front End Team Lead</h3>
+              <h4>January 2019 - February 2021</h4>
+            </li>
             <p>
               As a team lead, I coordinated: daily standups, cross-team issue
               triaging, company-wide feature demos, team retrospectives, and the
@@ -188,10 +192,10 @@
         <li>
           Yale University
           <ul>
-            <li>
+            <li class="title-date">
               <h3>Front End Web Developer, Web Applications Developer</h3>
+              <h4>January 2018 - January 2019</h4>
             </li>
-            <li>January 2018 - January 2019</li>
             <li>Project: Map of Life</li>
             <li>
               Department: Ecology and Evolutionary Biology, Max Planck Yale
@@ -227,8 +231,10 @@
         <li>
           Wolters GeoDevelopment, LLC
           <ul>
-            <li><h3>Owner</h3></li>
-            <li>November 2014 - December 2017</li>
+            <li class="title-date">
+              <h3>Owner</h3>
+              <h4>November 2014 - December 2017</h4>
+            </li>
             <p>
               Immediately after graduating, I founded and ran a small business
               doing GIS-related web development. I worked primarily with
@@ -259,8 +265,10 @@
         <li>
           Wisconsin State Cartographer's Office
           <ul>
-            <li><h3>GIS / Web Development Assistant</h3></li>
-            <li>September 2013 - December 2014</li>
+            <li class="title-date">
+              <h3>GIS / Web Development Assistant</h3>
+              <h4>September 2013 - December 2014</h4>
+            </li>
             <li>
               Responsibilities:
               <ul>
@@ -285,11 +293,10 @@
         <li>
           University of Wisconsin-Madison
           <ul>
-            <li>
-              Bachelor of Science: Geographic Information Sciences and
-              Cartography
+            <li class="title-date">
+              <h3>BS in Geographic Information Sciences and Cartography</h3>
+              <h4>Fall 2010 - Fall 2014</h4>
             </li>
-            <li>Fall 2010 - Fall 2014</li>
             <p>
               I focused on interactive cartography and web-development related
               classes. I worked as an intern during the last year and a half of
