--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>Caitlin Wolters</h1>
     <h2>Senior Frontend Software Engineer</h2>
     <h3>
-      I specialize in React-based web applications with a background in data
+      I specialize in building React-based web applications, with a background in data
       analytics software and GIS.
     </h3>
 
