--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
         <span class="title-date">
           <h4>Senior Product Engineer</h4>
           <h5>February 2021 - present</h5>
+          <p>
+            I am currently working on our company's UI component library,
+            specializing in building our data table component and related
+            functionality.
+          </p>
+          <h4>Recent projects:</h4>
+          <ul>
+            <li>
+              Building out a global data validation framework that can be used
+              across components
+            </li>
+            <li>Implementing validation within data tables</li>
+            <li>
+              Spearheading a project to build a server-backed grid component
+            </li>
+          </ul>
         </span>
       </section>
       <section>
@@ -217,6 +233,11 @@
             Updating and maintaining public datasets stored in PGSQL databases
           </li>
         </ul>
+        <h4>Notable Clients:</h4>
+        <ul>
+          <li>The Association of State Floodplain Managers</li>
+          <li>SharedGeo</li>
+        </ul>
       </section>
       <section>
         <h3>Wisconsin State Cartographer's Office</h3>
@@ -267,7 +288,7 @@
         </ul>
       </section>
       <section>
-        <h3>Accolades:</h3>
+        <h3>Praise</h3>
         <blockquote>
           "One thing that I appreciate (and our team appreciates) is that
           Caitlin takes time 'to leave a place better than she found it.' As she
