--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
         <h4>ES6, Typescript, Webpack, React, Redux, Angular</h4>
       </section>
       <section class="compact">
-        <h3>Backend</h3>
-        <h4>Node</h4>
-      </section>
-      <section class="compact">
-        <h3>Data Visualization + Maps</h3>
-        <h4>d3, OpenLayers, Leaflet, Google Maps, Mapbox</h4>
-      </section>
-      <section class="compact">
         <h3>Design</h3>
         <h4>HTML5, CSS / SCSS, Figma</h4>
       </section>
       <section class="compact">
-        <h3>Database</h3>
-        <h4>Various SQL flavors</h4>
+        <h3>Workflow</h3>
+        <h4>git + GitHub, Agile, JIRA</h4>
       </section>
       <section class="compact">
-        <h3>Workflow</h3>
-        <h4>git + GitHub, Agile</h4>
+        <h3>Data Visualization + Maps</h3>
+        <h4>AgGrid, d3, OpenLayers, Leaflet, Google Maps, Mapbox</h4>
+      </section>
+      <section class="compact">
+        <h3>Backend</h3>
+        <h4>Node</h4>
+      </section>
+      <section class="compact">
+        <h3>Database</h3>
+        <h4>Various SQL flavors</h4>
       </section>
       <section class="compact">
         <h3>GIS</h3>
