--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
       <section class="compact">
         <h3>Backend</h3>
-        <h4>Node, Various SQL flavors</h4>
+        <h4>Node, various SQL flavors</h4>
       </section>
       <section class="compact">
         <h3>GIS</h3>
