add favicon + modify font colors

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h2>Skills</h2>
       <section class="compact">
         <h3>Frontend</h3>
-        <h4>ES6, Typescript, Webpack, React, Redux, Angular</h4>
+        <h4>ES6, React, Typescript, Webpack, Redux, Angular</h4>
       </section>
       <section class="compact">
         <h3>Design</h3>
@@ -312,7 +312,5 @@
         </li>
       </ul>
     </section>
-
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   </body>
 </html>
