--- a/index.html
+++ b/index.html
@@ -293,14 +293,14 @@
           better or if the changes are too far off her current track, then she
           will file a JIRA with breadcrumbs."
         </blockquote>
-        Erik Brockman, current manager at Ridgeline
+        <cite>&#8211; Erik Brockman, current manager at Ridgeline</cite>
 
         <blockquote>
           "Caitlin’s strong technical background enabled her to come up to speed
           quickly, and she continues to produce high quality PRs that impress
           her peers."
         </blockquote>
-        Erik Brockman, current manager at Ridgeline
+        <cite>&#8211; Erik Brockman, current manager at Ridgeline</cite>
       </section>
     </section>
 
