--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </section>
       <section class="compact">
         <h3>Workflow</h3>
-        <h4>git + GitHub, Agile, JIRA</h4>
+        <h4>git + GitHub, Agile, Jira</h4>
       </section>
       <section class="compact">
         <h3>Data Visualization + Maps</h3>
