--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
       <section class="compact">
         <h3>Data Visualization + Maps</h3>
-        <h4>AgGrid, d3, OpenLayers, Leaflet, Google Maps, Mapbox</h4>
+        <h4>AG Grid, d3, OpenLayers, Leaflet, Google Maps, Mapbox</h4>
       </section>
       <section class="compact">
         <h3>Backend</h3>
