updates to resume

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <h5>February 2021 - present</h5>
           <p>
             I am currently working on our company's UI component library,
-            specializing in building our data table component and related
+            specializing in building our data table components and related
             functionality.
           </p>
           <h4>Recent projects:</h4>
@@ -127,11 +127,15 @@
             <li>
               Spearheading a project to build a server-backed grid component
             </li>
+            <li>
+              Led a project to upgrade our highly-used table component's
+              extremely outdated base library across a dozen repositories
+            </li>
           </ul>
         </span>
       </section>
       <section>
-        <h3>OmniSci</h3>
+        <h3>Heavy.ai (formerly OmniSci)</h3>
         <span class="title-date">
           <h4>Front End Engineer, Front End Team Lead</h4>
           <h5>January 2019 - February 2021</h5>
