--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <h1>Caitlin Wolters</h1>
     <h2>Senior Frontend Software Engineer</h2>
     <h4>
-      I specialize in building React-based web applications, with a background
-      in data analytics software and GIS.
+      I specialize in building complex React-based web applications, with a
+      background in data analytics software and GIS.
     </h4>
 
     <section>
