--- a/index.html
+++ b/index.html
@@ -293,14 +293,18 @@
           better or if the changes are too far off her current track, then she
           will file a JIRA with breadcrumbs."
         </blockquote>
-        <cite>&#8211; Erik Brockman, current manager at Ridgeline</cite>
+        <cite
+          >&#8211; Erik Brockman, VP of Platform Engineering at Ridgeline</cite
+        >
 
         <blockquote>
           "Caitlin’s strong technical background enabled her to come up to speed
           quickly, and she continues to produce high quality PRs that impress
           her peers."
         </blockquote>
-        <cite>&#8211; Erik Brockman, current manager at Ridgeline</cite>
+        <cite
+          >&#8211; Erik Brockman, VP of Platform Engineering at Ridgeline</cite
+        >
       </section>
     </section>
 
