--- a/index.html
+++ b/index.html
@@ -293,18 +293,24 @@
           better or if the changes are too far off her current track, then she
           will file a JIRA with breadcrumbs."
         </blockquote>
-        <cite
-          >&#8211; Erik Brockman, VP of Platform Engineering at Ridgeline</cite
-        >
+        <cite>&#8211; VP of Platform Engineering at Ridgeline</cite>
 
         <blockquote>
           "Caitlin’s strong technical background enabled her to come up to speed
           quickly, and she continues to produce high quality PRs that impress
           her peers."
         </blockquote>
-        <cite
-          >&#8211; Erik Brockman, VP of Platform Engineering at Ridgeline</cite
-        >
+        <cite>&#8211; VP of Platform Engineering at Ridgeline</cite>
+        <blockquote>
+          Caitlin has been really selfless with her time helping the [team]
+          discover new Grid offerings and understand how to implement new
+          features. I am personally in awe of the way Caitlin has been handling
+          feature requests from Product teams. She is never phased by our
+          complex asks. Grids are some of the most (if not the most) complicated
+          Platform offerings, and Caitlin has been an awesome captain [...]. She
+          has been a great partner to our team.
+        </blockquote>
+        <cite>&#8211; Engineering manager at Ridgeline</cite>
       </section>
     </section>
 
