--- a/index.html
+++ b/index.html
@@ -287,18 +287,18 @@
       <section>
         <h3>Praise</h3>
         <blockquote>
-          "One thing that I appreciate (and our team appreciates) is that
-          Caitlin takes time 'to leave a place better than she found it.' As she
-          is working, she regularly takes time to refactor existing code for the
+          One thing that I appreciate (and our team appreciates) is that Caitlin
+          takes time 'to leave a place better than she found it.' As she is
+          working, she regularly takes time to refactor existing code for the
           better or if the changes are too far off her current track, then she
-          will file a JIRA with breadcrumbs."
+          will file a JIRA with breadcrumbs.
         </blockquote>
         <cite>&#8211; VP of Platform Engineering at Ridgeline</cite>
 
         <blockquote>
-          "Caitlin’s strong technical background enabled her to come up to speed
+          Caitlin’s strong technical background enabled her to come up to speed
           quickly, and she continues to produce high quality PRs that impress
-          her peers."
+          her peers.
         </blockquote>
         <cite>&#8211; VP of Platform Engineering at Ridgeline</cite>
         <blockquote>
