--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           Platform offerings, and Caitlin has been an awesome captain [...]. She
           has been a great partner to our team.
         </blockquote>
-        <cite>&#8211; Engineering manager at Ridgeline</cite>
+        <cite>&#8211; Engineering Manager at Ridgeline</cite>
       </section>
     </section>
 
