update ridgeline description

--- a/index.html
+++ b/index.html
@@ -117,20 +117,28 @@
             specializing in building our data table components and related
             functionality.
           </p>
+          <p>
+            Subject matter expert and effective tech lead for our product's data
+            grid component, which is used heavily by our customers to manage
+            investment data (trade orders, accounting, reporting, etc).
+          </p>
           <h4>Recent projects:</h4>
           <ul>
             <li>
-              Building out a global data validation framework that can be used
-              across components
-            </li>
-            <li>Implementing validation within data tables</li>
-            <li>
-              Spearheading a project to build a server-backed grid component
+              Built out a global data validation framework that could be used
+              across components, and implemented that framework within our grid
+              component.
             </li>
             <li>
-              Led a project to upgrade our highly-used table component's
-              extremely outdated base library across a dozen repositories
+              Led a project to build a server-backed grid component to meet an
+              urgent customer need.
             </li>
+            <li>
+              Led 6-month project to upgrade our grid component to the a new
+              version of the underlying library without disrupting extensive
+              usage throughout the product.
+            </li>
+            <li></li>
           </ul>
         </span>
       </section>
