add leadership section for ridgeline

--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
       <section>
         <h3>Leadership</h3>
         <p>
-          At OmniSci I was nominated to be a Team Lead. I led several projects
+          At Ridgeline I became the subject matter expert on our product's data
+          grid component, which was used extensively across 12 repositories. I
+          led several projects related to our grids, including: implementing a
+          brand new validation framework, writing a server-backed grid, and
+          leading our team's project to upgrade the grid's underlying library 3
+          major versions.
+        </p>
+        <p>
+          At Heavy.ai I was nominated to be a Team Lead. I led several projects
           to build new features - handling both project management tasks as well
           as contributing to the code. I led the team’s retrospectives, and
           facilitated feedback between our team and all levels of management
