--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <h4>HTML5, CSS / SCSS, Figma</h4>
       </section>
       <section class="compact">
-        <h3>Workflow</h3>
-        <h4>git + GitHub, Agile, Jira</h4>
+        <h3>Workflow + Testing</h3>
+        <h4>git + GitHub, Agile, Jira, Jest, Cypress</h4>
       </section>
       <section class="compact">
         <h3>Data Visualization + Maps</h3>
