--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h2>Skills</h2>
       <section class="compact">
         <h3>Frontend</h3>
-        <h4>ES6, React, Typescript, Webpack, Redux, Angular</h4>
+        <h4>Javascript, React, Typescript, Webpack, Redux, Angular</h4>
       </section>
       <section class="compact">
         <h3>Design</h3>
@@ -59,7 +59,7 @@
       </section>
       <section class="compact">
         <h3>Backend</h3>
-        <h4>Node, various SQL flavors</h4>
+        <h4>Node, various SQL flavors, Postgres</h4>
       </section>
       <section class="compact">
         <h3>GIS</h3>
@@ -77,7 +77,7 @@
           led several projects related to our grids, including: implementing a
           brand new validation framework, writing a server-backed grid, and
           leading our team's project to upgrade the grid's underlying library 3
-          major versions.
+          major versions. 
         </p>
         <p>
           At Heavy.ai I was nominated to be a Team Lead. I led several projects
@@ -130,6 +130,11 @@
             grid component, which is used heavily by our customers to manage
             investment data (trade orders, accounting, reporting, etc).
           </p>
+          <p>
+            I'm currently working on a team that is writing a new table
+            component from scratch that is datasource-agnostic and serves the
+            needs of rapidly-updating financial data.
+          </p>
           <h4>Recent projects:</h4>
           <ul>
             <li>
@@ -146,6 +151,10 @@
               version of the underlying library without disrupting extensive
               usage throughout the product.
             </li>
+          </ul>
+          <h4>Additional responsibilities:</h4>
+          <ul>
+            <li>Interviewing prospective hires</li>
           </ul>
         </span>
       </section>
