--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <h4>Senior Product Engineer</h4>
           <h5>February 2021 - present</h5>
           <p>
-            I am currently working on our company's UI component library,
+            I am currently working on our company's UI component library team,
             specializing in building our data table components and related
             functionality.
           </p>
@@ -132,16 +132,17 @@
           </p>
           <p>
             I'm currently working on a team that is writing a new table
-            component from scratch that is datasource-agnostic and serves the
-            needs of rapidly-updating financial data.
+            component that is datasource-agnostic and serves the needs of
+            rapidly-updating financial data.
           </p>
           <h4>Recent projects:</h4>
           <ul>
-            <li>
-              Built out a global data validation framework that could be used
-              across components, and implemented that framework within our grid
-              component.
-            </li>
+            <li>Built out a global validation framework that could be used
+            across forms and tables using a library called yup</li>
+            <li>Designed and built row grouping capabilities within our new
+            table component, including architecture for calculating aggregate
+            data and the architecture required to paginate over collapsed groups
+            in a server-side environment</li>
             <li>
               Led a project to build a server-backed grid component to meet an
               urgent customer need.
@@ -155,6 +156,7 @@
           <h4>Additional responsibilities:</h4>
           <ul>
             <li>Interviewing prospective hires</li>
+            <li>Mentoring junior developers across multiple teams</li>
           </ul>
         </span>
       </section>
@@ -198,7 +200,6 @@
       </section>
       <section>
         <h3>Yale University</h3>
-
         <span class="title-date">
           <h4>Front End Web Developer, Web Applications Developer</h4>
           <h5>January 2018 - January 2019</h5>
@@ -335,6 +336,12 @@
           has been a great partner to our team.
         </blockquote>
         <cite>&#8211; Engineering Manager at Ridgeline</cite>
+        <blockquote>
+          [Her] eye for details, personal standard of quality, ability and
+          courage to tackle big complex things are all astounding, and have made
+          [her] an awesome teammate. 
+        </blockquote>
+        <cite>&#8211; Staff Engineer at Ridgeline</cite>
       </section>
     </section>
 
