--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Caitlin Wolters Resume</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -95,7 +95,7 @@
         <p>
           I do my best to provide prompt, empathetic, and humble communication
           with everyone at my company. It's also my passion to write
-          easily-readble, well-documented code. Additionally, the VP of
+          easily-readable, well-documented code. Additionally, the VP of
           Marketing at OmniSci called my presentation skills “fantastic”.
         </p>
       </section>
